[package]
name = "native-to-trezoaanchor"
description = "Generate TrezoaAnchor IDLs and clients from native Trezoa programs"
version = "0.1.0"
authors = ["acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/acheroncrypto/native-to-trezoaanchor"
documentation = "https://github.com/acheroncrypto/native-to-trezoaanchor/blob/master/README.md"
license = "MIT"
edition = "2021"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock"
]
keywords = ["native-to-trezoaanchor", "trezoa", "trezoaanchor", "trezoaanchor-client", "nta"]

[dependencies]
trezoaanchor-syn = { version = "0.25.0", features = ["idl"] }
clap = { version = "3.2.16", features = ["derive"] }
colored = "2.0.0"
log = "0.4.17"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
toml = "0.5.9"

[[bin]]
name = "native-to-trezoaanchor"
path = "src/main.rs"
