[package]
name = "nta-example"
version = "0.1.0"
description = "A simple program to show how Native to TrezoaAnchor works"
authors = ["acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/TRZLedgerFoundation/native-to-trezoaanchor"
license = "MIT"
edition = "2018"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
trezoa-program = "1.10.35"
borsh = "*"
thiserror = "*"